# stdeb

./: .gitignore  .travis.yml  BUGS.rst  CHANGELOG.txt  Earthfile  LICENSE.txt  MANIFEST.in  README.rst  README.txt  RELEASE_NOTES.txt  Vagrantfile  Vagrantfile.debian-7-wheezy.rb  Vagrantfile.debian-8-jessie.rb  Vagrantfile.ubuntu-12.04-precise.rb  build.earth  requirements.txt  setup.cfg  setup.py  stdeb-0.4.3.tar.gz.delta  stdeb-0.4.3.tar.gz.id  stdeb-0.5.0.tar.gz.delta  stdeb-0.5.0.tar.gz.id  stdeb-0.6.0.tar.gz.delta  stdeb-0.6.0.tar.gz.id  stdeb-0.7.0.tar.gz.delta  stdeb-0.7.0.tar.gz.id  stdeb-0.7.1.tar.gz.delta  stdeb-0.7.1.tar.gz.id  stdeb-0.8.0.tar.gz.delta  stdeb-0.8.0.tar.gz.id  stdeb-0.8.1.tar.gz.delta  stdeb-0.8.1.tar.gz.id  stdeb-0.8.2.tar.gz.delta  stdeb-0.8.2.tar.gz.id  stdeb.cfg  test-pypi-install.sh  test-ros-pypi-installs.sh  test.sh  test2and3.sh
.github/workflows/: ci.yaml
scripts/: dpkg-stdeb  py2dsc  py2dsc-deb  pypi-download  pypi-install
stdeb/: __init__.py  cli_runner.py  downloader.py  py2dsc.py  pypi_simple.py  stdeb_run_setup.py  transport.py  util.py  which.py
stdeb.egg-info/: stdeb.cfg
stdeb/command/: __init__.py  bdist_deb.py  common.py  debianize.py  install_deb.py  sdist_dsc.py  stdeb.py
test_data/py2_only_pkg/: setup.py
test_data/py2_only_pkg/py2_only_pkg/: py2_module.py
test_data/py3_only_pkg/: setup.py
test_data/py3_only_pkg/py3_only_pkg/: py3_module.py
test_data/simple_pkg/: setup.py
tests/unit/: test_version.py
