[metadata]
name = stdeb
author = Andrew Straw
author_email = strawman@astraw.com
license = MIT
description = Python to Debian source package conversion utility
url = http://github.com/astraw/stdeb
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3

[options]
packages = stdeb, stdeb.command
scripts =
    scripts/py2dsc
    scripts/py2dsc-deb
    scripts/pypi-download
    scripts/pypi-install
